# Interactive_Chatbot

./: CMakeLists.txt  README.md  chatbot  decision_tree.json  dsa_knowledge.json  dsa_knowledge.json.bak  package-lock.json  package.json  query.json  responses.json  server.js  start.sh  stop.sh
frontend/: index.html  script.js  style.css
src/cpp/: DSAKnowledge.cpp  DSAServer.cpp  DecisionTree.cpp  Graph.cpp  HashTable.cpp  main.cpp
src/headers/: DSAKnowledge.h  DSAServer.h  DecisionTree.h  Graph.h  HashTable.h
